--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ examples/apikeys.js
 # SASS
 .sass-cache
 **/theme/**/*.css
+**/themes/**/*.css
+!**/themes/**/styleguide/*.css
+!**/themes/**/styleguide/**/*.css
 
 build/
 
