Update Aerisjs github repo link

--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "Aeris Interactive",
   "keywords": ["maps", "weather", "weathernation", "backbone"],
   "version": "0.1.0",
-  "homepage": "https://github.com/hamweather/aeris-interactive",
+  "homepage": "https://github.com/hamweather/aerisjs",
   "main": "lib/config",
   "ignore": [
     "deployment/",
