Change references from "Aeris Interactive" to 'Aeris.js'

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Aeris Interactive",
+  "name": "Aeris.js",
   "keywords": ["maps", "weather", "weathernation", "backbone"],
   "version": "0.1.0",
   "homepage": "https://github.com/hamweather/aerisjs",
