--- a/examples/amd/bower.json
+++ b/examples/amd/bower.json
@@ -2,7 +2,7 @@
   "name": "Aeris.js: Example app using AMD and Bower",
   "version": "1.0.0",
   "dependencies": {
-    "aeris-interactive": "../../#master",
+    "aerisjs": "../../#master",
     "requirejs": "~2.1.8"
   },
   "private": true
