--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     ".gitignore"
   ],
   "dependencies": {
-    "underscore": "~1.5.2",
+    "underscore": "~1.6.0",
     "backbone": "~1.1.0",
     "marionette": "~1.6.2",
     "handlebars": "~1.1.2",
@@ -29,5 +29,8 @@
     "jasmine": "1.3.1",
     "sinon": "http://sinonjs.org/releases/sinon-1.7.1.js",
     "jasmine-slow": "https://github.com/joneath/jasmine-slow.git"
+  },
+  "resolutions": {
+    "underscore": "~1.6.0"
   }
 }
