--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,6 @@
     "jasmine-slow": "https://github.com/joneath/jasmine-slow.git"
   },
   "resolutions": {
-    "underscore": "~1.6.0"
+    "jquery": "~2.0.3"
   }
 }
