AMD example: resolve jQuery bower version, remove Backbone shim
Backbone now supports AMD out of the box

--- a/examples/amd/bower.json
+++ b/examples/amd/bower.json
@@ -5,5 +5,8 @@
     "aerisjs": "../../#master",
     "requirejs": "~2.1.8"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "jquery": "~2.0.3"
+  }
 }
