--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "underscore": "~1.6.0",
     "when": "~2.8.0",
     "bower": "~1.3.1",
-    "grunt-cli": "~0.1.13"
+    "grunt-cli": "~0.1.13",
+    "closure-linter-wrapper": "~0.2.9",
+    "grunt-gjslint": "~0.1.4"
   }
 }
