--- a/bower.json
+++ b/bower.json
@@ -35,5 +35,8 @@
     "jasmine": "1.3.1",
     "sinon": "http://sinonjs.org/releases/sinon-1.7.1.js",
     "jasmine-slow": "https://github.com/joneath/jasmine-slow.git"
+  },
+  "resolutions": {
+    "jquery": "~2.0.3"
   }
 }
