--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "bower": "~1.3.1",
     "grunt-cli": "~0.1.13",
     "closure-linter-wrapper": "~0.2.9",
-    "grunt-gjslint": "~0.1.4"
+    "grunt-gjslint": "~0.1.4",
+    "grunt-shell": "~0.6.4",
+    "grunt-contrib-copy": "~0.5.0"
   }
 }
