--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ before_script:
 - npm run-script bower
 deploy:
   provider: s3
-  access_key_id: eschwartz
+  access_key_id: "eschwartz"
   secret_access_key:
-    secure: Zg2WJZuuW/33UDiMyhvTh/g+7lRohaa98z5y9HBo6al9WSZPTAo34NtMKsVljcdFKGIf0827bJXki1hujYv3purDEl0NIGm6yWL/PWpRkSUlQCklvT8RitSV7feIZMyMNze6P4bL06l2O4FtVr3P0lMAxQ3Al855USVYADSX/Os=
-  bucket: aerisjs
+    secure: "Zg2WJZuuW/33UDiMyhvTh/g+7lRohaa98z5y9HBo6al9WSZPTAo34NtMKsVljcdFKGIf0827bJXki1hujYv3purDEl0NIGm6yWL/PWpRkSUlQCklvT8RitSV7feIZMyMNze6P4bL06l2O4FtVr3P0lMAxQ3Al855USVYADSX/Os="
+  bucket: "aerisjs"
   skip_cleanup: true
   local-dir: build
   on:
