--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ node_js:
 - "0.11"
 before_script:
 - npm run-script bower
+script:
+- npm grunt
 deploy:
   provider: s3
   access_key_id: eschwartz
