--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "test": "./node_modules/grunt-cli/bin/grunt test --verbose",
-    "bower": "./node_modules/bower/bin/bower install && ./node_modules/bower/bin/bower update"
+    "bower": "./node_modules/bower/bin/bower install && ./node_modules/bower/bin/bower update",
+    "build": "./node_modules/grunt-cli/bin/grunt --verbose"
   },
   "repository": {
     "type": "git",
