--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "closure-linter-wrapper": "~0.2.9",
     "grunt-gjslint": "~0.1.4",
     "grunt-shell": "~0.6.4",
-    "grunt-contrib-copy": "~0.5.0"
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-checkbranch": "git://github.com/eschwartz/grunt-checkbranch.git#Feature/if-branch",
+    "handlebars": "~1.3.0",
+    "yuidocjs": "~0.3.49"
   }
 }
