--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "grunt-shell": "~0.6.4",
     "grunt-contrib-copy": "~0.5.0",
     "handlebars": "~1.3.0",
-    "yuidocjs": "~0.3.49"
+    "yuidocjs": "~0.3.49",
+    "grunt-contrib-requirejs": "~0.4.3",
+    "jasmine-node": "~1.14.2"
   }
 }
