--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "./node_modules/grunt-cli/bin/grunt test --verbose",
     "bower": "./node_modules/bower/bin/bower install && ./node_modules/bower/bin/bower update",
     "build": "./node_modules/grunt-cli/bin/grunt --verbose",
+    "travis": "./node_modules/grunt-cli/bin/grunt travis --verbose",
     "deploy": "./node_modules/grunt-cli/bin/grunt deploy --verbose"
   },
   "repository": {
