--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
 install:
 - npm install
 - sudo pip install awscli
+- sudo gem update --system && gem install compass
 before_script:
 - npm run-script bower
 script:
