--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "handlebars": "~1.3.0",
     "yuidocjs": "~0.3.49",
     "grunt-contrib-requirejs": "~0.4.3",
-    "jasmine-node": "~1.14.2"
+    "jasmine-node": "~1.14.2",
+    "grunt-contrib-compass": "~0.7.2"
   }
 }
