--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ bower_components/
 examples/amd/bower_components
 
 # Sandbox
-examples/sandbox/js/app.js
+examples/sandbox/
 
 # environment specific files
 examples/apikeys.js
