--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: node_js
 node_js:
 - '0.11'
 install:
+- npm config --verbose --fetch-retries 5
 - npm install
 - sudo pip install awscli
 - gem install compass
