--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,7 @@
     "requirejs": "~2.1.8",
     "requirejs-text": "~2.0.10",
     "hbars": "https://github.com/jfparadis/requirejs-handlebars.git",
-    "jquery": "~2.0.3",
+    "jquery": "1.8.0 - 1.11.0",
     "gmaps-markerclusterer-plus": "http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.1.1/src/markerclusterer.js",
     "wire": "~0.10.5",
     "wire-rjs-builder": "https://github.com/pieter-vanderwerff/wire-rjs-builder.git",
@@ -35,8 +35,5 @@
     "jasmine": "1.3.1",
     "sinon": "http://sinonjs.org/releases/sinon-1.7.1.js",
     "jasmine-slow": "https://github.com/joneath/jasmine-slow.git"
-  },
-  "resolutions": {
-    "jquery": "~2.0.3"
   }
 }
