--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ node_js:
 - '0.11'
 install:
 - npm install --quiet --fetch-retries 5
-- sudo pip install awscli
 - gem install compass
+- if [[ "$TRAVIS_BRANCH" == "master" ]]; then sudo pip install awscli; fi
 before_script:
 - npm run-script bower
 script:
