Revert "Travis: deploy using grunt task"
This reverts commit 1f05d8ce1954dd6d6f2d31513c31f6db8f2ed8bc.

grunt-shell task is unable to access AWS config key from env

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ env:
 after_success:
   - if [[ "$TRAVIS_BRANCH" != "master" ]]; then echo "Deployments are only done for the master branch. Current branch is $TRAVIS_BRANCH"; exit 0; fi
   - echo "Deploying build $TRAVIS_BUILD_NUMBER"
-  - npm run-script deploy
+  - aws s3 cp build/lib s3://cdn.aerisjs.com --recursive --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
+  - aws s3 cp build/docs s3://docs.aerisjs.com --recursive --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
 after_failure:
   - "cat /home/travis/build/hamweather/aerisjs/npm-debug.log"
