--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "grunt-contrib-requirejs": "~0.4.3",
     "jasmine-node": "~1.14.2",
     "grunt-contrib-compass": "~0.7.2",
-    "grunt-contrib-compress": "~0.7.0"
+    "grunt-contrib-compress": "~0.7.0",
+    "grunt-contrib-clean": "~0.5.0"
   }
 }
