--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,6 @@ after_success:
   - echo "Deploying build $TRAVIS_BUILD_NUMBER"
   - aws s3 cp build/lib s3://cdn.aerisjs.com --recursive --content-encoding gzip
   - aws s3 cp build/docs s3://docs.aerisjs.com --recursive
+  - aws s3 cp build/demo s3://demo.aerisjs.com --recursive
 after_failure:
   - "cat /home/travis/build/hamweather/aerisjs/npm-debug.log"
