AMD example: fix jQuery path (for using jquery <2.0)

--- a/examples/amd/bower.json
+++ b/examples/amd/bower.json
@@ -5,8 +5,5 @@
     "aerisjs": "latest",
     "requirejs": "~2.1.8"
   },
-  "private": true,
-  "resolutions": {
-    "jquery": "~2.0.3"
-  }
+  "private": true
 }
