--- a/package.json
+++ b/package.json
@@ -32,11 +32,7 @@
   },
   "devDependencies": {
     "grunt": "~0.4.3",
-    "phantomjs": "~1.9.7-1",
-    "grunt-lib-phantomjs": "~0.5.0",
-    "chalk": "~0.4.0",
     "underscore": "~1.6.0",
-    "when": "~2.8.0",
     "bower": "~1.3.1",
     "grunt-cli": "~0.1.13",
     "closure-linter-wrapper": "~0.2.9",
@@ -49,6 +45,7 @@
     "jasmine-node": "~1.14.2",
     "grunt-contrib-compass": "~0.7.2",
     "grunt-contrib-compress": "~0.7.0",
-    "grunt-contrib-clean": "~0.5.0"
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-jasmine-legacy": "~1.0.3"
   }
 }
