Ignore aeris-interactive (renamed)

--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,4 @@ tests/specrunner-*.html
 # Nested libraries
 # (for dev environment, only)
 aeris-riderx/
-aeris-interactive-maps/
+aeris-interactive/
