--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "./node_modules/grunt-cli/bin/grunt test --verbose",
     "build": "./node_modules/grunt-cli/bin/grunt --verbose",
-    "travis": "./node_modules/grunt-cli/bin/grunt travis --verbose",
+    "travis": "./node_modules/grunt-cli/bin/grunt travis",
     "deploy": "./node_modules/grunt-cli/bin/grunt deploy --verbose"
   },
   "repository": {
