--- a/bower.json
+++ b/bower.json
@@ -20,12 +20,10 @@
   "dependencies": {
     "underscore": "~1.6.0",
     "backbone": "~1.1.0",
-    "marionette": "~1.6.2",
     "handlebars": "~1.1.2",
     "requirejs": "~2.1.10",
     "requirejs-text": "~2.0.10",
     "hbars": "https://github.com/jfparadis/requirejs-handlebars.git",
-    "jquery": "1.8.0 - 1.11.0",
     "gmaps-markerclusterer-plus": "http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.1.1/src/markerclusterer.js",
     "googlemaps-amd": "~1.0.0",
     "leaflet.markercluster": "~0.4.0"
@@ -34,6 +32,7 @@
     "almond": "~0.2.9",
     "jasmine": "1.3.1",
     "sinon": "http://sinonjs.org/releases/sinon-1.7.1.js",
-    "jasmine-slow": "https://github.com/joneath/jasmine-slow.git"
+    "jasmine-slow": "https://github.com/joneath/jasmine-slow.git",
+    "jquery": "1.8.0 - 1.11.0"
   }
 }
