--- a/package.json
+++ b/package.json
@@ -30,21 +30,22 @@
     "url": "https://github.com/hamweather/aerisjs/issues"
   },
   "devDependencies": {
-    "grunt": "~0.4.3",
-    "underscore": "~1.6.0",
     "bower": "~1.3.1",
-    "grunt-cli": "~0.1.13",
     "closure-linter-wrapper": "~0.2.9",
-    "grunt-gjslint": "~0.1.4",
-    "grunt-shell": "~0.6.4",
-    "grunt-contrib-copy": "~0.5.0",
-    "handlebars": "~1.3.0",
-    "yuidocjs": "~0.3.49",
-    "grunt-contrib-requirejs": "~0.4.3",
-    "jasmine-node": "~1.14.2",
+    "grunt": "~0.4.3",
+    "grunt-cli": "~0.1.13",
+    "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-compass": "~0.7.2",
     "grunt-contrib-compress": "~0.7.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-jasmine-legacy": "~1.0.5"
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-requirejs": "~0.4.3",
+    "grunt-gjslint": "~0.1.4",
+    "grunt-jasmine-legacy": "~1.0.5",
+    "grunt-shell": "~0.6.4",
+    "handlebars": "~1.3.0",
+    "jasmine-node": "~1.14.2",
+    "underscore": "~1.6.0",
+    "when": "^3.2.3",
+    "yuidocjs": "~0.3.49"
   }
 }
