--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "grunt-shell": "~0.6.4",
     "handlebars": "~1.3.0",
     "jasmine-node": "~1.14.2",
+    "mkdirp": "^0.5.0",
     "underscore": "~1.6.0",
     "when": "^3.2.3",
     "yuidocjs": "~0.3.49"
