Fix bower package name
- published name is aerisjs, not Aeris.js

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Aeris.js",
+  "name": "aerisjs",
   "description": "Aeris.js provides a suite of tools for rendering weather maps and widgets, and using data from  one of the most complete and advanced weather APIs available.",
   "keywords": [
     "maps",
