--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "lib": "src"
   },
   "scripts": {
-    "test": "./node_modules/grunt-cli/bin/grunt test",
-    "build": "./node_modules/grunt-cli/bin/grunt",
-    "deploy": "./node_modules/grunt-cli/bin/grunt deploy --env=prod --verbose",
-    "deploy-staging": "./node_modules/grunt-cli/bin/grunt deploy --env=staging --verbose"
+    "test": "./node_modules/grunt-cli/bin/grunt test --no-color",
+    "build": "./node_modules/grunt-cli/bin/grunt--no-color",
+    "deploy": "./node_modules/grunt-cli/bin/grunt deploy --env=prod --verbose --no-color",
+    "deploy-staging": "./node_modules/grunt-cli/bin/grunt deploy --env=staging --verbose --no-color"
   },
   "repository": {
     "type": "git",
