Fix type in npm build script

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "test": "./node_modules/grunt-cli/bin/grunt test --no-color",
-    "build": "./node_modules/grunt-cli/bin/grunt--no-color",
+    "build": "./node_modules/grunt-cli/bin/grunt --no-color",
     "deploy": "./node_modules/grunt-cli/bin/grunt deploy --env=prod --verbose --no-color",
     "deploy-staging": "./node_modules/grunt-cli/bin/grunt deploy --env=staging --verbose --no-color"
   },
