--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "grunt-contrib-requirejs": "~0.4.3",
     "grunt-githooks": "~0.3.1",
     "grunt-gjslint": "~0.1.4",
-    "grunt-jasmine-legacy": "^1.2.4",
+    "grunt-jasmine-legacy": "1.2.3",
     "grunt-shell": "~0.6.4",
     "grunt-text-replace": "^0.3.12",
     "handlebars": "~1.3.0",
