--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "test": "./node_modules/grunt-cli/bin/grunt test --no-color",
+    "test-in-container": "./tests/test-in-container.sh",
     "build": "./node_modules/grunt-cli/bin/grunt --no-color",
     "deploy": "./node_modules/grunt-cli/bin/grunt deploy --env=prod --no-color",
     "deploy-staging": "./node_modules/grunt-cli/bin/grunt deploy --env=staging --no-color"
